feat: enhance store and menu item handling, add new models and preflight checks
- Update StoreMenuPage and StoresPage to handle nested data structures for store and menu items.
- Introduce new models for MenuItem, Order, RefreshToken, Store, and User.
- Implement preflight checks for required environment variables in backend configuration.
- Add utility functions for formatting user, store, menu item, and order data.
- Create a new dev script for concurrent backend and frontend development.
- Add new shared components for desktop hints and password requirements.
- Implement ProfilePage with user profile management and validation.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "CampusBite - Campus Food Ordering Platform",
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev": "node dev.js",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
