--- a/fly.toml
+++ b/fly.toml
@@ -1,28 +1,23 @@
-app = "campusbite"
-primary_region = "bom"
+# fly.toml app configuration file generated for campus-bite on 2026-02-22T10:45:47Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'campus-bite'
+primary_region = 'bom'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  NODE_ENV = "production"
-  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = "suspend"
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
-[[http_service.checks]]
-  interval = "15s"
-  timeout = "5s"
-  grace_period = "30s"
-  method = "get"
-  path = "/api/health"
-
-[[mounts]]
-  source = "uploads_data"
-  destination = "/app/backend/public/uploads"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 512
