--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,9 @@ primary_region = 'bom'
 
 [build]
 
+[env]
+  UPLOAD_DIR = "/data/uploads"
+
 [http_service]
   internal_port = 8080
   force_https = true
